syntax = "proto3";

package auth_dbsvc.v1;

option go_package = "deblasis.net/space-traffic-control/gen/proto/go/auth_dbsvc/proto/v1;auth_dbsvc_v1";

service AuthDBService {
  rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {}
}


message User {
  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_SHIP = 1;
    ROLE_STATION = 2;
    ROLE_COMMAND = 3;
  }
  int64 id = 1;
  string username = 2;
  string password = 3;
  Role role = 4;
}

message CreateUserRequest {
  User user = 1;
}


message CreateUserResponse {
  int64 id = 1;
  string error = 2;
}

message GetUserByUsernameRequest {
  string username = 1;
}
message GetUserByUsernameResponse {
  User user = 1;
  string error = 2;
}

message ServiceStatusRequest {}

message ServiceStatusResponse {
  int64 code = 1;
  string err = 2;
}